aplacc/tests/failing/sierpinski0.tail
let v0:[int]2 = reshape{[int],[1,2]}([1,1],[1]) in
let v1:[int]2 = v0 in
let v2:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(cat{[int],[2]}(v1,reshape{[int],[1,2]}(shape{[int],[2]}(v1),[0]))),transp{[int],[2]}(cat{[int],[2]}(v1,v1)))) in
let v3:[int]2 = v2 in
let v4:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(cat{[int],[2]}(v3,reshape{[int],[1,2]}(shape{[int],[2]}(v3),[0]))),transp{[int],[2]}(cat{[int],[2]}(v3,v3)))) in
let v5:[int]2 = v4 in
let v6:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(cat{[int],[2]}(v5,reshape{[int],[1,2]}(shape{[int],[2]}(v5),[0]))),transp{[int],[2]}(cat{[int],[2]}(v5,v5)))) in
let v7:[int]2 = v6 in
let v8:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(cat{[int],[2]}(v7,reshape{[int],[1,2]}(shape{[int],[2]}(v7),[0]))),transp{[int],[2]}(cat{[int],[2]}(v7,v7)))) in
let v9:[int]2 = v8 in
let v10:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(cat{[int],[2]}(v9,reshape{[int],[1,2]}(shape{[int],[2]}(v9),[0]))),transp{[int],[2]}(cat{[int],[2]}(v9,v9)))) in
i2d(reduce{[int],[0]}(addi,0,reduce{[int],[1]}(addi,0,v10)))
